# Swink-AgentShore

./: .editorconfig  .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TNQA.md  TODO.md  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml
.github/: CODEOWNERS  contributors.json  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: approve-contributor.yml  ci.yml  installer-windows.yml  pr-gate.yml  release-macos.yml  release-pypi.yml  release-windows.yml  scorecard.yml
.tnqa/: 01_plays_core.md  02_plays_rest.md  03_core.md  04_rl.md  05_data.md  06_agents.md  07_sidecar_ipc.md  08_cli.md  09_ui_dashboard.md  10_reports_skills_misc.md
dashboard/: avatar-preview.html  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.lib.json  vite.config.ts
dashboard/src/: agentRegistry.ts  dashboard.css  demoTransport.ts  dom.ts  format.ts  index.ts  logger.ts  main.ts  notifyStore.ts  reactEntry.ts  state.ts  types.ts  ws.ts
dashboard/tests/: ErrorBoundary.test.tsx  IdentitiesScreen.test.tsx  KanbanHiddenBadge.test.tsx  StatsStageConcurrency.test.tsx  TrustedSourcesScreen.test.tsx  characterSprites.test.ts  eventDrawerReducer.test.ts  feedbackAutoStop.test.ts  format.test.ts  layoutGeometry.test.ts  libraryComponents.test.tsx  projectionModes.test.ts  reactEntry.test.ts  rendererLayering.test.ts  setup.ts  stateManager.test.ts  workspaceLayout.test.ts
desktop/: index.html  package.json  rpc-method-classes.json  tsconfig.json  vite.config.ts
desktop/scripts/: prepare-tauri-assets.mjs
desktop/src/: App.tsx  SessionStartingOverlay.tsx  StartingProgress.tsx  StartingProgressRoute.tsx  main.tsx  startupSteps.ts  styles.css  theme.ts
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/provisioner/: Cargo.toml
desktop/src-tauri/provisioner/src/: agentshore_provisioner.rs  main.rs
desktop/src-tauri/src/: activity.rs  diagnostics.rs  heartbeat.rs  install_layout.rs  jsonrpc_stdio.rs  lib.rs  main.rs  menu.rs  methods.rs  quit.rs  readiness.rs  session_state.rs  sidecar.rs  sidecar_env.rs  sidecar_pid.rs  sidecar_runtime.rs  ui_state.rs  window.rs
desktop/src-tauri/src/github_multi/: credential.rs  github.rs  mod.rs
desktop/src-tauri/src/sidecar/: agents.rs  crash_watch.rs  mod.rs  rpc.rs  transport.rs
docs/: PRD.md  agent-dispatch-onepager.html  getting-started-cli.md  getting-started-desktop.md  identity.md  play-transitions.html  rl-overview.html
docs/design/: HLD.md  V1_CONTRACT.md  beads-github-sync.md  beads-server-mode.md  build-pipeline-unification.md  desktop-menu-bar-decisions.md  ipc-decouple-coalesce.md  play_lifecycle.html  preferences-menu-decisions.md  webview-crash-recovery.md  welcome-carousel.md
docs/release/: signing.md
packaging/desktop/: Distribution.xml.in  README.md  build_bd_sidecar.py
scripts/: build-macos.sh  build-windows.ps1  export_bootstrap_policy.py  generate_update_manifest.py  install-agentshore-cli.ps1  install-agentshore-cli.sh  install-agentshore-venv.ps1  install-agentshore-venv.sh  install-agentshore.ps1  install-timelapse.ps1  install-timelapse.sh  run-windows-installer-step.ps1
scripts/buildkit/: __init__.py  __main__.py  _proc.py  _win_signing.ps1  context.py  macos.py  phases.py  verify.py  version.py  windows.py
src/agentshore/: __init__.py  __main__.py  archive.py  availability.py  budget.py  cli_helpers.py  cli_identity.py  command.py  cooldown.py  environment.py  error_markers.py  errors.py  identity_names.py  keyring_child.py  learnings.py  log_redaction.py  logging.py  paths.py  platform_compat.py  play_pacing.py  play_rules.py  power.py  pr_state.py  preferences.py  result_parser.py  seed_input.py  session_path.py  session_process.py  state.py  subprocess_env.py  utils.py  work_availability.py
tests/: ci_support.py  conftest.py  orchestrator_factory.py  test_agent_capabilities.py  test_agent_handle.py  test_agent_manager.py  test_agent_selection.py  test_agent_snapshot_play_counts.py  test_alignment_delta_live.py  test_archive.py  test_auth_probe_spawn.py  test_availability_record.py  test_beads_agent_path_shim.py  test_beads_cycle_detection.py  test_beads_durability.py  test_beads_fixes.py  test_beads_graph_cache.py  test_beads_lock.py  test_beads_phase0.py  test_bootstrap_phase4.py  test_bootstrap_seed.py  test_branch_sync.py  test_budget_heartbeat.py  test_calibrate_alignment_play.py  test_circuit_breaker.py  test_cli.py  test_cli_add_budget.py  test_cli_agent.py  test_cli_antigravity.py  test_cli_config_overrides.py  test_cli_grok_usage.py  test_cli_helpers.py  test_cli_identity.py  test_cli_models.py  test_cli_phase4.py  test_cli_phase5.py  test_cli_phase6.py  test_cli_polish.py  test_cli_preferences.py  test_cli_runtime.py  (+183 more)
tests/agents/: test_dispatch_learnings.py
tests/cli/: test_caffeinate.py  test_platform_compat.py
tests/dashboard/: test_bridge.py  test_lifecycle.py
tests/desktop/: test_dashboard_workspace_layout.py  test_tauri_asset_hosting.py  test_tauri_signing_config.py  test_update_manifest.py
tests/fixtures/: grok_streaming_real_0_2_32.jsonl  grok_streaming_with_usage.jsonl  mock_agent.py
tests/integration/: conftest.py  test_agent_lifecycle.py  test_anti_confirmation.py  test_budget_exhaustion.py  test_config_reload.py  test_deterministic_replay.py  test_dispatch_worktree.py  test_happy_path.py  test_loop_detection.py  test_reaper_lifecycle.py  test_scope_validation.py
tests/ipc/: __init__.py  test_commands.py  test_provider.py  test_serializer.py  test_server.py  test_state_writer.py  test_wire.py
tests/packaging/: test_buildkit_macos_args.py  test_buildkit_windows_args.py  test_desktop_bundle_profile.py  test_desktop_postinstall.py  test_verify_gate.py  test_verify_gate_windows.py  test_version_consistency.py  (+1 more)
tmp/: TNQA-critical-plan.md
(+641 files in other folders)
