[package]
name = "agentshore-desktop"
version = "0.1.0"
description = "AgentShore desktop shell"
authors = ["SuperSwink"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "agentshore_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

# DESIGN §1.3 — one sidecar per app lifetime. Enforced at the shell layer
# so a second `open AgentShore.app` focuses the existing window instead of
# spawning a parallel sidecar.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# desktop-bzr2: NSProcessInfo activity assertion suppresses macOS App Nap
# while a AgentShore session is active. objc2 is already pulled in by Tauri
# transitively; we declare a direct dep with the specific features we need
# so the explicit usage in src/activity.rs compiles.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString", "NSObject"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
