[package]
name = "agentshore-desktop"
version = "0.9.2"
description = "AgentShore desktop shell"
authors = ["SuperSwink"]
license = "MIT"
edition = "2021"
rust-version = "1.77"
default-run = "agentshore-desktop"

# The agentshore-provisioner binary is a SEPARATE workspace crate (./provisioner),
# not a [[bin]] of this app crate. Tauri's bundler enumerates every [[bin]] in the
# crate it builds and copies it into the .app; keeping the provisioner out of this
# crate is what structurally prevents that helper from ever landing in the macOS
# bundle. The Windows build compiles it via `cargo build -p agentshore-provisioner`.
[workspace]
members = ["provisioner"]

[lib]
name = "agentshore_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Supply-chain hardening: all crates are pinned to exact versions with the
# `=` operator (not caret ranges) and matched to Cargo.lock. Builds run with
# `cargo build --locked` so no crate changes without an explicit, reviewed
# bump. Do not loosen the `=` pins back to ranges.
[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
tauri = { version = "=2.11.5", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-fs = "=2.5.1"
tauri-plugin-shell = "=2.3.5"
tauri-plugin-store = "=2.4.4"
tauri-plugin-updater = "=2.10.1"

# DESIGN §1.3 — one sidecar per app lifetime. Enforced at the shell layer
# so a second `open AgentShore.app` focuses the existing window instead of
# spawning a parallel sidecar.
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "=2.4.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.151"

[target.'cfg(unix)'.dependencies]
libc = "=0.2.186"

# desktop-bzr2: NSProcessInfo activity assertion suppresses macOS App Nap
# while a AgentShore session is active. objc2 is already pulled in by Tauri
# transitively; we declare a direct dep with the specific features we need
# so the explicit usage in src/activity.rs compiles.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", features = ["NSProcessInfo", "NSString", "NSObject"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "=0.61.2", features = ["Win32_Foundation", "Win32_System_Threading"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
